# some-dl-models

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
code/base_class/: __init__.py  artifacts.py  dataset.py  evaluate.py  experiment_tracker.py  method.py  notifier.py  result.py  setting.py
code/lib/: comet_listeners.py
code/lib/encoding/: bert_encoder.py  multi_encoder.py  onnx_encoder.py  pytorch_encoder.py
code/lib/notifier/: __init__.py  artifacts_notifier.py  dataset_notifier.py  evaluate_notifier.py  method_notifier.py  result_notifier.py  setting_notifier.py
code/lib/util/: device.py
code/stage_1_code/: Dataset_Loader.py  Evaluate_Accuracy.py  Evaluate_F1.py  Evaluate_Precision.py  Evaluate_Recall.py  Method_DT.py  Method_MLP.py  Method_SVM.py  Result_Loader.py  Result_Saver.py  Setting_KFold_CV.py  Setting_Train_Test_Split.py  __init__.py
code/stage_2_code/: Artifacts_Saver.py  Dataset_Loader.py  Method_MLP.py  Setting_Train_Test_Split.py  onnx_encoder.py
code/stage_3_code/: Dataset_Loader.py  Evaluate_F1.py  Method_CNN_CIFAR.py  Method_CNN_MNIST.py  Method_CNN_ORL.py  Method_cnn_mnist.py  README.md  Setting_Train_Test_Split.py  Setting_Train_Test_Split_MNIST.py  Setting_Train_Test_Split_ORL.py
code/stage_4_code/: Dataset_Loader_Classification.py  Dataset_Loader_RNN_Generator.py  Evaluate_F1.py  JokeGenerationDataset.py  Method_GRU_classification.py  Method_LSTM_classification.py  Method_RNN_Joke.py  Method_RNN_classification.py  Result_Saver.py  Setting_Joke_Generator.py  Setting_Train_Test_Split_RNN_Classififcation.py
code/stage_5_code/: Citeseer_GCN.py  Cora_GCN.py  Dataset_Loader_Node_Classification.py  GraphVisualizer.py  Graph_Loader.py  Setting_Equal_Sampling_Split.py
code/tests/: test_Dataset_Loader.py  test_artifacts.py  test_base_notifier.py  test_comet_listeners.py  test_example.py  test_method_notifier.py  test_metric_refactor.py  test_stage_4_loader.py
code/tests/files/: stage_4_gen_sample.csv
data/stage_1_data/: readme  toy_data_file.txt
data/stage_2_data/: README.md  unittest_dataset.csv
data/stage_3_data/: README.md
data/stage_4_data/: ReadMe.md
data/stage_4_data/text_classification/: README
data/stage_4_data/text_generation/: README.md
result/stage_3_artifacts/: MNIST_CNN.onnx
result/stage_3_result/: CNN_prediction_result_None
result/stage_5_artifacts/: GCN_Citeseer_Classification.pth
script/stage_1_script/: script_decision_tree.py  script_load_result.py  script_mlp.py  script_svm.py  test_Dataset_Loader.py
script/stage_2_script/: stage_2_data_analysis.ipynb  stage_2_load_result.py  stage_2_script_mlp.py
script/stage_3_script/: CNNVisualizer.py  cifar_cnn_script.py  mnist_cnn_script.py  orl_cnn_script.py  stage_3_data_analysis.ipynb
script/stage_4_script/: classification_rnn.py  generator_rnn_script.py  preprocess_files.py  rnn_joke_gen_script.py
script/stage_5_script/: graph_gcn.py  node_classification.py  node_classification_citeseer.py  visualize_graphs.py
