[[tool.mypy.overrides]]
module = "comet_ml.*"
ignore_missing_imports = true
[tool.poetry]
name = "some-dl-models"
version = "0.1.0"
description = "This is the repository for the ECS189G course on Deep Learning. The main purpose of this project is to help students get familiar with classic deep learning models and use them to solve concrete real-world problems."
authors = ["Alejandro Armas <armas@ucdavis.edu>", "Lia Hepler-Mackey <lmheplermackey@ucdavis.edu>", "Sachin Loecher <smloecher@ucdavis.edu>", "Matthew Schulz <mkschulz@ucdavis.edu>"]
license = "MIT"
readme = "README.md"
packages = [{include = "some-dl-models"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
comet-ml = ">=3.31.22"
scikit-learn = ">=1.2.0"
torchmetrics = "^0.11.1"
pandas = "^1.5.3"
onnx = "^1.13.0"
opencv-python = "^4.7.0.68"
cerberus = "^1.3.4"
pillow = "^9.4.0"
torchvision = "^0.14.1"
transformers = "^4.26.1"
torchtext = "^0.14.1"
torch = ">=1.13.1"
torch-geometric = "^2.2.0"
torch-scatter = {version = "^2.1.0+pt113cpu", source = "torch-wheels"}
torch-sparse = {version = "^0.6.16+pt113cpu", source = "torch-wheels"}
torch-cluster = {version = "^1.6.0+pt113cpu", source = "torch-wheels"}
torch-spline-conv = {version = "^1.2.1+pt113cpu", source = "torch-wheels"}


[tool.poetry.group.dev.dependencies]
mypy = ">=0.991"
black = "^22.12.0"
flake8 = "^6.0.0"
isort = "^5.11.4"
pre-commit = "^3.0.0"
conventional-pre-commit = "^2.1.1"
coverage = "^7.1.0"
pandas-stubs = "^1.5.3.230203"


[[tool.poetry.source]]
name = "torch-wheels"
url = "https://data.pyg.org/whl/torch-1.13.1+cpu.html"
default = false
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
      .eggs         # exclude a few common directories in the
    | .git          # root of the project
    | .hg
    | .mypy_cache
    | .tox
    | venv
    | .venv
    | ./.venv
    | _build
    | buck-out
    | build
    | dist
  )/
'''


# iSort
[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
virtual_env = "venv"

[tool.mypy]
python_version = "3.10"
exclude = [".venv", "./.venv", "venv"]
